// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> should render as expected 1`] = `
<label
  className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 bbAzsR aries-radiobtn"
  tabIndex={0}
>
  <input
    name="job-type"
    type="radio"
    value="full-time"
  />
  <span
    className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 lbhaEe"
    data-testid="radio-icon"
    size="regular"
  />
  <span
    className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 eXfMxm radiobtn-content"
    size="regular"
    tabIndex={-1}
  >
    Full Time
  </span>
</label>
`;

exports[`<RadioButton> should render as expected 2`] = `
<label
  className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 iuajHP aries-radiobtn"
  tabIndex={0}
>
  <input
    name="job-type"
    type="radio"
    value="full-time"
  />
  <span
    className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 cJkVuY"
    data-testid="radio-icon"
    size="regular"
  />
  <span
    className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 kUPSui radiobtn-content"
    size="regular"
    tabIndex={-1}
  >
    Full Time
  </span>
</label>
`;

exports[`<RadioButton> should render as expected 3`] = `
Array [
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 bbAzsR aries-radiobtn"
    tabIndex={0}
  >
    <input
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 lbhaEe"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 eXfMxm radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Full Time
    </span>
  </label>,
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 bbAzsR aries-radiobtn"
    tabIndex={0}
  >
    <input
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 lbhaEe"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 eXfMxm radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Intership
    </span>
  </label>,
]
`;

exports[`<RadioButton> should render as expected 4`] = `
Array [
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 bbAzsR aries-radiobtn"
    tabIndex={0}
  >
    <input
      checked={true}
      name="job-type"
      type="radio"
      value="full-time"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 lbhaEe"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 eXfMxm radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Full Time
    </span>
  </label>,
  <label
    className="RadioButtonStyle__RadioContainer-sc-1dmv219-3 bbAzsR aries-radiobtn"
    tabIndex={0}
  >
    <input
      name="job-type"
      type="radio"
      value="intership"
    />
    <span
      className="RadioButtonStyle__RadioIcon-sc-1dmv219-0 lbhaEe"
      data-testid="radio-icon"
      size="regular"
    />
    <span
      className="RadioButtonStyle__RadioLabel-sc-1dmv219-1 eXfMxm radiobtn-content"
      size="regular"
      tabIndex={-1}
    >
      Intership
    </span>
  </label>,
]
`;
